@@ -141,12 +141,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
        +1: trawick, wrowe, colm
         backported 280114 to 2.2.x branch already
 
-    *) Add ReceiveBufferSize directive to control the TCP receive buffer. 
-       code: http://svn.apache.org/viewcvs?view=rev&rev=157583
-             http://svn.apache.org/viewcvs?rev=280401&view=rev
-       docs: http://svn.apache.org/viewcvs?rev=280384&view=rev
-       +1: stas, trawick, colm
-
     *) mod_dav: Fix a null pointer dereference in an error code path during the
        handling of MKCOL.
        Trunk version of patch:
